--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
 h1 {
   font-family: "Poppins", sans-serif;
-  font-size: 3rem;
+  font-size: clamp(2rem, 5vw, 3rem);
   font-weight: 700;
   color: #fff;
 }
@@ -57,6 +57,11 @@ a {
   color: var(--primary);
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 #sobre p {
   font-size: 1.2rem;
   margin-bottom: 10rem;
@@ -73,16 +78,14 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1100px;
+  width: 100%;
+  max-width: auto;
   padding: 20px 24px 24px 0;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-}
-
-#whats-top {
-  font-size: 2rem;
+  height: 7rem;
 }
 
 .menu {
@@ -90,7 +93,6 @@ a {
   list-style: none;
   gap: 24px;
   margin: 0;
-  padding: 0;
 }
 
 .menu a {
@@ -110,7 +112,7 @@ a {
 
 .hero {
   text-align: center;
-  padding: 10rem 0 10rem;
+  padding: 15rem 1rem;
 }
 
 .hero h1 {
@@ -161,7 +163,8 @@ a {
   padding: 20px;
   transition: 0.3s ease;
   width: 22.5rem;
-  height: 33rem;
+  height: auto;
+  min-height: 33rem;
 }
 
 .project-card img {
@@ -280,7 +283,7 @@ a {
 
 #habilidades .habil-item {
   position: relative;
-  font-size: 60px; /* tamanho do ícone */
+  font-size: 60px;
   color: var(--text);
   cursor: pointer;
   transition: transform 0.2s ease;
@@ -348,28 +351,17 @@ footer .socials a:hover {
 }
 
 /* responsividade */
+
 @media (max-width: 768px) {
-  .menu a {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 1rem;
-  }
-
-  #whats-top {
-    font-size: 2rem;
-    margin-left: 20px;
-  }
-
-  /* cards */
-
   .container-card {
-    display: inline-block;
-
+    flex-direction: column;
+    gap: 2rem;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0 1rem;
-    gap: 20px;
-    margin-top: 2rem;
-    margin-bottom: 10rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   .project-card {
@@ -378,16 +370,36 @@ footer .socials a:hover {
     border-radius: 12px;
     padding: 20px;
     transition: 0.3s ease;
-    width: 30rem;
-    height: 34.5rem;
+    height: auto;
+    min-height: 33rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .container-card {
+    flex-direction: column;
+    gap: 2rem;
+    max-width: 1200px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .project-card {
+    background: #111827;
+    border: 1px solid #1f2937;
+    border-radius: 12px;
+    transition: 0.3s ease;
+    height: auto;
+    min-height: 33rem;
+    margin-top: 2rem;
+  }
+
+  #projetos h2 {
     margin-bottom: 2rem;
   }
 
-  .project-card img {
-    width: 100%;
-    height: 15rem;
-    object-fit: cover;
-    border-radius: 8px;
-    margin-bottom: 1.7rem;
+  #habilidades h2 {
+    margin-top: 10rem;
   }
 }
